# svnutil

./: README.md  stack.yaml  svnutil-bat.bat  svnutil.cabal
app/: svnutil.hs
conf/: config.properties  sysbee_runme.sql
src/: Dialogs.hs  Utils.hs
