name:                svnutil
version:             2.0.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            
license:             MIT
license-file:        LICENSE
author:              Andrei Golubev
maintainer:          
copyright:           2016 Andrei Golubev
category:            utility
build-type:          Simple
data-files:
                     conf/config.properties
                     conf/sysbee_runme.sql
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Dialogs
                     , Utils
  build-depends:       base >= 4.7 && < 5
                                         
  default-language:    Haskell2010

executable svnutil
  hs-source-dirs:      app
  main-is:             svnutil.hs
  buildable:           True
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , process
                     , filepath
                     , time                 
                     , directory
                     , svnutil
  default-language:    Haskell2010

test-suite svnutil-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , svnutil
                     
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: 
